<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:text="@string/selectTime" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/checkboxBreakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_breakfast" />

            <ImageView
                android:id="@+id/breakfastDetail"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:src="@drawable/report_icon"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/checkboxLunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_lunch" />

            <ImageView
                android:id="@+id/lunchDetail"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:src="@drawable/report_icon"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/checkboxDinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_dinner" />

            <ImageView
                android:id="@+id/dinnerDetail"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:src="@drawable/report_icon"
                android:visibility="invisible" />

        </LinearLayout>
    </LinearLayout>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:text="@string/selectDays" />

    <com.squareup.timessquare.CalendarPickerView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="400sp" />

    <Button
        android:id="@+id/btnBacket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@drawable/shape_select"
        android:text="@string/add_to_basket"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@drawable/shape"
        android:text="@string/calc_title"
        android:textColor="@color/white" />

</LinearLayout>
