<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="@string/selectDays" />

            <Button
                android:id="@+id/selectDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_select"
                android:gravity="center"
                android:hint="@string/select"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:layout_marginTop="10dp"
                android:text="@string/selectPersons" />

            <com.example.mykty.askhanacatering.module.MultiSpinner
                android:id="@+id/spinnerPersons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_select"
                android:gravity="center"
                android:hint="@string/select"
                android:minHeight="50sp"
                android:paddingLeft="10dp"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:layout_marginTop="10dp"
                android:text="@string/selectTime" />

            <com.example.mykty.askhanacatering.module.MultiSpinner
                android:id="@+id/spinnerTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_select"
                android:gravity="center"
                android:hint="@string/select"
                android:minHeight="50sp"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/btnReporSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/shape"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:text="@string/collectReport"
                android:textColor="@color/white" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>
