<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_breakfast"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/bPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="0 тенге"
            android:textColor="@color/blue_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_lunch"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/lPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="1800 тенге"
            android:textColor="@color/blue_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_dinner"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/dPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="2800 тенге"
            android:textColor="@color/blue_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/all_title"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/sumPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="3600 тенге"
            android:textColor="@color/blue_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/shape"
            android:gravity="center"
            android:text="@string/pay"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>
