<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mainL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/select_group"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/select_group_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:prompt="@string/group"
            android:textColorHint="#05ab9a" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ems="10"
                android:hint="@string/s_info" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="true"
                android:hint="@string/read_card_number" />

        </android.support.design.widget.TextInputLayout>

        <!--<Button-->
            <!--android:id="@+id/scannerQrCode"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@drawable/button_style2"-->
            <!--android:text="@string/qr_code_scanner" />-->

        <!--<Button-->
            <!--android:id="@+id/choosePhoto"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10sp"-->
            <!--android:background="@drawable/button_style2"-->
            <!--android:text="@string/photo" />-->

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/btnOk"
            android:layout_weight="1"
            android:background="@null"
            android:text="Cancel"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:background="@null"
            android:text="OK"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>
</LinearLayout>