<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mainL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/selectTime"
            android:textSize="16sp"/>

        <Spinner
            android:id="@+id/guest_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textColorHint="#05ab9a" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/selectStudent"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/selectStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_style"
            android:ems="8"
            android:text="@string/select"
            android:textColor="@color/white" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/btnOk"
            android:layout_weight="1"
            android:background="@null"
            android:text="Cancel"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:background="@null"
            android:text="OK"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>
</LinearLayout>