<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/selectNewDay"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/selectDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10sp"
                android:text=""
                android:textStyle="bold"
                android:textColor="@color/blue_light"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

    <com.squareup.timessquare.CalendarPickerView
        android:id="@+id/calendar_view_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnReplace"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linear1" />


    <Button
        android:id="@+id/btnReplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:gravity="center"
        android:text="@string/replace"
        android:textColor="@color/orange" />

    <Button
        android:id="@+id/btnDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@null"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/red" />

</RelativeLayout>
